--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="menu-wrapper">
           <div class="">
             <div class="logo">
-              <a href="https://xuexi1234567890.github.io/xxbj/"><img src="\media\images\custom-headerLogo.png" alt=""></a>
+              <a href="https://xuexi1234567890.github.io/xxbj/"><img src="https://git.poker/xuexi1234567890/xxbj/blob/bb/PicX/custom-headerLogo.6jdmql8za4w0.webp?raw=true" alt=""></a>
             </div>
             <!-- start: .main-nav -->
 
@@ -346,7 +346,7 @@
         </div>
 
         <div class="logo">
-          <a href="https://xuexi1234567890.github.io/xxbj/"><img src="\media\images\custom-footerLogo.png" alt=""></a>
+          <a href="https://xuexi1234567890.github.io/xxbj/"><img src="https://git.poker/xuexi1234567890/xxbj/blob/bb/PicX/custom-headerLogo.6jdmql8za4w0.webp?raw=true" alt=""></a>
         </div>
         <p class="published border-effect">
           ©2019 共 3 篇文章
